# telescope

./: .gitignore  Makefile.am  configure.ac
gr-telescope/: CMakeLists.txt  MANIFEST.md  install_script.sh
gr-telescope/cmake/Modules/: telescopeConfig.cmake
gr-telescope/docs/: README.telescope
gr-telescope/docs/doxygen/: Doxyfile.in
gr-telescope/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-telescope/grc/: CMakeLists.txt  telescope_FrequencyWatcher.xml  telescope_NoiseSink.xml
gr-telescope/include/telescope/: CMakeLists.txt  FrequencyWatcher.h  NoiseSink.h  api.h
gr-telescope/lib/: CMakeLists.txt  FrequencyWatcher_impl.cc  FrequencyWatcher_impl.h  NoiseSink_impl.cc  NoiseSink_impl.h  TelescopeMessages.h  qa_telescope.cc  qa_telescope.h  test_telescope.cc
gr-telescope/python/: CMakeLists.txt  __init__.py  qa_NoiseSink.py
gr-telescope/swig/: CMakeLists.txt  telescope_swig.i
stargazer/: AudioBlockControl.cpp  AudioBlockControl.h  FrequencyControl.cpp  FrequencyControl.h  MinimapControl.cpp  MinimapControl.h  NodeControl.cpp  NodeControl.h  NoiseEvents.cpp  NoiseEvents.h  StargazerGUI.cpp  StargazerGUI.h  TelescopeGlobals.h  TimelineControl.cpp  TimelineControl.h  main.cpp
